# agenti-rag_project-

./: README.md  build_indexes.py  faiss_test.py  ingest.py  llm_test.py  main.py  pyproject.toml  test_hybrid.py  test_load.py
agents/: answer.py  law_tool.py  planner.py  reflector.py  tour_tool.py
data/faiss/law/: index.faiss  index.pkl
data/faiss/tour_guide/: index.faiss  index.pkl
embeddings/: embedder.py  indexer.py
ingestion/: chunker.py  enrich.py  loader.py  normalizer.py
prompts/: answer.txt  planner.txt  reflection.txt
retrieval/: bm25.py  hybrid.py  mmr.py  vector.py
schemas/: answer_output.py  planner_output.py  reflection_output.py
