[project]
name = "rag-lama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "community>=1.0.0b1",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.6",
    "langchain-huggingface>=1.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.0",
    "numpy>=2.4.0",
    "pydantic>=2.12.5",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.0",
    "unstructured[pdf]>=0.18.24",
]
